
5.25  2014-08-05
  - Added reduce method to Mojo::Collection.
  - Fixed escaping bugs in Mojo::DOM::CSS.
  - Improved documentation browser CSS.

5.24  2014-08-02
  - Improved url_escape performance slightly.
  - Fixed memory leak in Mojo::IOLoop::Client.
  - Fixed bug where ojo would sometimes die silently.

5.23  2014-07-31
  - Improved router performance.
  - Improved routes command to show format regular expression separately.
  - Fixed partial route bug in Mojolicious::Routes::Match.
  - Fixed format detection bug in Mojolicious::Routes::Pattern.

5.22  2014-07-30
  - Added SOCKS5 support to Mojo::UserAgent.
  - Added socks_address, socks_pass, socks_port and socks_user options to
    Mojo::IOLoop::Client::connect.
  - Improved documentation browser CSS.

5.21  2014-07-27
  - Improved handling of Pod::Simple::XHTML 3.09 dependency.
  - Improved documentation browser CSS.

5.20  2014-07-27
  - Fixed a few bugs in Mojolicious::Plugin::PODRenderer by switching from
    Pod::Simple::HTML to Pod::Simple::XHTML.
  - Fixed Perl 5.18.x compatibility.

5.19  2014-07-26
  - Improved support for Unicode anchors in Mojolicious::Plugin::PODRenderer.
  - Fixed is_readable scalability problems in Mojo::Reactor.

5.18  2014-07-25
  - Improved is_readable performance in Mojo::Reactor.

5.17  2014-07-24
  - Welcome to the Mojolicious core team Jan Henning Thorsen.
  - Added val method to Mojo::DOM. (batman, sri)
  - Improved Mojo::Collection performance.
  - Fixed support for Unicode anchors in Mojolicious::Plugin::PODRenderer.

5.16  2014-07-21
  - Improved Mojo::Asset::File to allow appending data to existing files.
    (iakuf, sri)

5.15  2014-07-17
  - Improved Mojo::DOM::HTML performance slightly.
  - Fixed small selector bug in get command.

5.14  2014-07-14
  - Improved all_text performance in Mojo::DOM.
  - Improved Mojo::DOM::CSS, Mojo::DOM::HTML and Mojo::JSON performance with
    regular expression optimizations.