@@ -1,8 +1,9 @@
 
 5.25  2014-08-05
   - Added reduce method to Mojo::Collection.
-  - Fixed escaping bugs in Mojo::DOM::CSS.
+  - Improved sort method in Mojo::Collection to use $a and $b. (batman)
   - Improved documentation browser CSS.
+  - Fixed escaping bugs in Mojo::DOM::CSS.
 
 5.24  2014-08-02
   - Improved url_escape performance slightly.
